TAG: mrkcoordload-6-0-6-1
DATE: 11/08/2016
STAFF: lec 
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
_Marker_Status_key = 2 changed to _Marker_Status_key != 1

TAG: mrkcoordload-6-0-5-2
DATE: 09/01/2016
STAFF: lec 
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
 _Marker_Status_key not in (1,3) changed to = 2

TAG: mrkcoordload-6-0-5-1
DATE: 08/30/2016
STAFF: lec
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
 _Marker_Status_key in (1,3) changed to "= 1"

TAG: mrkcoordload-6-0-4-1
DATE: 04/27/2016
STAFF: lec 
CHANGES: TR12069/postgres cleanup
1) convert to Git 
2) add "db.setAutoTranslate"

TAG: mrkcoordload-6-0-3-2
DATE: 4/5/2016
STAFF: dbm
CHANGES:
1) Install: Remove use of /hobbiton mount

TAG: mrkcoordload-6-0-3-1
DATE: 03/07/2016
STAFF: lec 
CHANGES: TR12083/replace "vachar(30)" with "text"

TAG: mrkcoordload-6-0-1-1
DATE: 12/2/2015
STAFF: dbm 
CHANGES: TR11904 & TR12199
1) mrkcoordload.config.default: Remove MAIL_LOG_CUR setting

TAG: mrkcoordload-6-0-0-5
DATE: 09/28/2015
STAFF: lec 
CHANGES:
1) bin/createInputFiles.py : add db.commit()

TAG: mrkcoordload-6-0-0-4
DATE: 8/19/2015
STAFF: dbm
CHANGES:
1) bin/mrkcoordQC.sh: Use .pgpass file in the user's HOME directory if

TAG: mrkcoordload-6-0-0-1, mrkcoordload-6-0-0-2, mrkcoordload-6-0-0-3
DATE: 07/24/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: mrkcoordload-tr11750-MP
DATE: 7/1/15
STAFF: pf
CHANGES: merge point tag

TAG: mrkcoordload-5-2-1-2
DATE: 04/14/2015
STAFF: dbm
CHANGES:
1) bin/mrkcoordload.sh: Use "head -n +1" to get the first line in the file.

TAG: mrkcoordload-5-2-1-1
DATE: 04/10/2015
STAFF: lec
CHANGES:
1) bin/mrkcoordload.sh
changed "cat" command to "cut" for all unix servers

TAG: mrkcoordload-tr11750-1
DATE: 04/10/2015
STAFF: lec
CHANGES:
1) bin/mrkcoordload.sh
changed "cat" command to "cut" for all unix servers

TAG: mrkcoordload-5-1-7-1
DATE: 03/16/2014
STAFF: sc
CHANGES: